force-app/main/default/objects/Lead/fields/School_or_company_name__c.field-meta.xml
<CustomField>
    <fullName>School_or_company_name__c</fullName>
    <label>School or company name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>