force-app/main/default/objects/Lead/fields/Secondary_Education__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Education__c</fullName>
    <description>If the student might have attended graduate school or similar program upon finishing their undergrad.</description>
    <label>Secondary Education</label>
    <type>TextArea</type>
</CustomField>