force-app/main/default/objects/Lead/fields/Special_Ackno__c.field-meta.xml
<CustomField>
    <fullName>Special_Ackno__c</fullName>
    <label>Special Acknowledgements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I understand and agree to comply with the U.S. Manufacturing plan.</fullName>
            </value>
            <value>
                <fullName>I understand and agree to comply with the Performance of Work in the U.S. requirement.</fullName>
            </value>
            <value>
                <fullName>I agree to comply with U.S. Export Control Laws and Regulations.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>