force-app/main/default/objects/Lead/fields/Technical_Resources__c.field-meta.xml
<CustomField>
    <fullName>Technical_Resources__c</fullName>
    <label>Technical Resources</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>