force-app/main/default/objects/Lead/fields/What_is_your_degree_in__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_degree_in__c</fullName>
    <label>What is your degree in?</label>
    <type>TextArea</type>
</CustomField>