force-app/main/default/objects/Lead/fields/What_was_the_degree_you_earned_from_this__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_degree_you_earned_from_this__c</fullName>
    <description>Degree that student earned from secondary school</description>
    <label>What was the degree you earned from this</label>
    <type>TextArea</type>
</CustomField>