force-app/main/default/objects/Lead/fields/Work_in_METAL_Industry__c.field-meta.xml
<CustomField>
    <fullName>Work_in_METAL_Industry__c</fullName>
    <description>Do you currently work in the METAL industry for METALs</description>
    <label>Work in METAL Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>