force-app/main/default/objects/Lead/fields/Workfdorce_Type__c.field-meta.xml
<CustomField>
    <fullName>Workfdorce_Type__c</fullName>
    <inlineHelpText>Used to trigger email alerts to external resources.</inlineHelpText>
    <label>Workforce Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Composites Career Pathways (ACCP)</fullName>
            </value>
            <value>
                <fullName>America&apos;s Cutting Edge (ACE)</fullName>
            </value>
            <value>
                <fullName>Nextflex MEEP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>