force-app/main/default/objects/Lead/fields/Workforce_Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Organization_Type__c</fullName>
    <inlineHelpText>This field is on the Workforce RFI form.</inlineHelpText>
    <label>Workforce Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workforce_Organization_Type</valueSetName>
    </valueSet>
</CustomField>