force-app/main/default/objects/Lead/listViews/ACE_Composites_and_Finishing_Registrants.listView-meta.xml
<ListView>
    <fullName>ACE_Composites_and_Finishing_Registrants</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Composites_and_Finishing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Composites_and_Finishing__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>ACE Composites and Finishing Registrants</label>
</ListView>