force-app/main/default/objects/Lead/listViews/ACE_Composites_Online_Registrants.listView-meta.xml
<ListView>
    <fullName>ACE_Composites_Online_Registrants</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Composites_Online_Signup_Form_Time__c</columns>
    <columns>Composites_and_Finishing__c</columns>
    <columns>Machine_Tool_Response_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>School_or_company_country__c</field>
        <operation>equals</operation>
        <value>United States,Canada,Australia,Germany,Mexico</value>
    </filters>
    <label>ACE Composites Online Registrants</label>
</ListView>