force-app/main/default/objects/Lead/listViews/ACE_Intro_to_Cybersecuity_Registrants.listView-meta.xml
<ListView>
    <fullName>ACE_Intro_to_Cybersecuity_Registrants</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>CMMC_Introduction_to_Cybersecurity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CMMC_Introduction_to_Cybersecurity__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>ACE Intro to Cybersecuity Registrants</label>
</ListView>