force-app/main/default/objects/Lead/listViews/ACE_Machine_Training_Online_Registrants.listView-meta.xml
<ListView>
    <fullName>ACE_Machine_Training_Online_Registrants</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Fusion_SUTAD__c</columns>
    <filterScope>Everything</filterScope>
    <label>ACE Machine Training Online Registrants</label>
</ListView>