force-app/main/default/objects/Lead/listViews/ACE_Mastercam_CNC_Machine_Registrants.listView-meta.xml
<ListView>
    <fullName>ACE_Mastercam_CNC_Machine_Registrants</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Mastercam_CNC_Machine__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mastercam_CNC_Machine__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>ACE Mastercam CNC Machine Registrants</label>
</ListView>