force-app/main/default/objects/Lead/listViews/ACE_Metal_Online_Registrants.listView-meta.xml
<ListView>
    <fullName>ACE_Metal_Online_Registrants</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Metal_SUTAD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Metal_SUTAD__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>ACE Metal Online Registrants</label>
</ListView>