force-app/main/default/objects/Lead/listViews/ACE_Metrology_Online_Registrants.listView-meta.xml
<ListView>
    <fullName>ACE_Metrology_Online_Registrants</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Metrology__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Metrology__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>ACE Metrology Online Registrants</label>
</ListView>