force-app/main/default/objects/Lead/listViews/ACEMetal.listView-meta.xml
<ListView>
    <fullName>ACEMetal</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>ACE_Metal_Signup_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>ACEMetal</label>
</ListView>