force-app/main/default/objects/Lead/listViews/All_Open_Workforce_Leads.listView-meta.xml
<ListView>
    <fullName>All_Open_Workforce_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Pardot_Counter__c</columns>
    <columns>Associated_ACE_Program__c</columns>
    <columns>Associated_METAL_Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Workforce Leads</label>
    <sharedTo>
        <group>Workforce</group>
    </sharedTo>
</ListView>