force-app/main/default/objects/Lead/listViews/CMMC_Introduction_to_Cybersecurity.listView-meta.xml
<ListView>
    <fullName>CMMC_Introduction_to_Cybersecurity</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>CMMC_Response_Date__c</columns>
    <columns>CMMC_Introduction_to_Cybersecurity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>School_or_company_country__c</field>
        <operation>equals</operation>
        <value>United States,Canada</value>
    </filters>
    <label>CMMC, Introduction to Cybersecurity</label>
</ListView>