force-app/main/default/objects/Lead/listViews/Copy_of_ACE_Online_Registrants.listView-meta.xml
<ListView>
    <fullName>Copy_of_ACE_Online_Registrants</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>School_type__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>pi__campaign__c</columns>
    <filterScope>Mine</filterScope>
    <label>Copy of ACE Online Registrants</label>
</ListView>