force-app/main/default/objects/Lead/listViews/Dales_Leads.listView-meta.xml
<ListView>
    <fullName>Dales_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Interested_in_becoming_a_Member__c</columns>
    <columns>Intersted_in_Partnering_on_Workforce__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Dale</value>
    </filters>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified,Qualified</value>
    </filters>
    <label>Dales Open  Leads</label>
    <sharedTo>
        <group>Membership</group>
    </sharedTo>
</ListView>