force-app/main/default/objects/Lead/listViews/Enrollment_Review.listView-meta.xml
<ListView>
    <fullName>Enrollment_Review</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>pi__campaign__c</columns>
    <filterScope>Mine</filterScope>
    <label>Enrollment Review</label>
</ListView>